--- a/notebook/dropout_prediction.ipynb
+++ b/notebook/dropout_prediction.ipynb
@@ -1027,6 +1027,24 @@
     "plt.savefig(\"../visuals/feature_importance.png\")\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "5d2e3b7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# save trained decision tree model\n",
+    "with open(\"../model/dropout_model.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(tree, f)\n",
+    "    \n",
+    "# save the scaler\n",
+    "with open(\"../model/scaler.pkl\", 'wb') as f:\n",
+    "    pickle.dump(scaler, f)"
+   ]
   }
  ],
  "metadata": {
