Finishing the readme documentation

--- a/notebook/dropout_prediction.ipynb
+++ b/notebook/dropout_prediction.ipynb
@@ -900,13 +900,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "id": "17e61306",
    "metadata": {},
    "outputs": [],
    "source": [
     "def evaluate_model(name, y_test, y_pred):\n",
-    "    print(f\"\\n📊 {name} Performance:\")\n",
+    "    print(f\"\\n{name} Performance:\")\n",
     "\n",
     "    eval_modules = {\n",
     "        'Accuracy': accuracy_score(y_test, y_pred),\n",
